# Web_Programing_Assignment_FE

./: .gitignore  README.md  app.js  database.sql  env.js  erDiagram.mmd  erd-diagram.md  erd-ltw (1).drawio  erd-ltw.drawio.xml  index-backup.md  index.html  package.json  pyproject.toml  style.css
about/: index.html
admin/: admin-users.html  comments.html  contacts.html  content.html  faq.html  faqs.html  feedback.html  home-content.html  index.html  login.html  news.html  orders.html  posts.html  products.html  settings-about.html  settings-general.html  settings.html  users-modular.html  users.html
app/: bootstrap.php
app/config/: config.php
app/controllers/: Admin.php  Auth.php  Home.php  Products.php  Users.php
app/core/: App.php  Controller.php  Database.php
app/models/: User.php
assets/css/: about.css  admin-dashboard.css  cart.css  faqs.css  footer.css  header.css  homepage.css  login.css  news.css  product-detail.css  products.css  profile.css  publisher.css  (+5 more)
auth/: login.html  register-publisher.html  register.html
cart/: index.html
components/: admin-navbar.html  admin-sidebar.html  footer.html  header.html
contact/: index.html
faqs/: index.html
news/: detail.html  index.html
products/: detail.html  index.html
public/: index.html
publishers/: dashboard.html  games.html  revenue.html  reviews.html  settings.html
user/: about.html  cart.html  checkout.html  contact.html  faq.html  index.html  login.html  news-detail.html  news.html  pricing.html  product-detail.html  products.html  profile.html  register.html
users/: profile.html
(+40 files in other folders)
