[project]
name = "nextplay-selenium-tests"
version = "0.1.0"
description = "Selenium tests for NextPlay login and dropdown functionality"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
    "mysql-connector-python>=8.1.0",
    "pymysql>=1.1.2",
    "pytest>=7.4.0",
    "pytest-html>=3.1.1",
    "python-dotenv>=1.0.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
]
